seguridad en NgStock:     ✔ Links with "target=_blank" should prevent phishing attacks @done(29-03-2021 10:37)         solución => <a href="https://sedeo.net" target="_blank" rel="noopener noreferrer">Go to sedeo</a>
    ✔ Variables declared with "var" should be declared before they are used @done(29-03-2021 10:34)
    ✔ Control structures should use curly braces. @done(29-03-2021 10:34)
    ✔ Functions should not be empty @done(29-03-2021 10:34)
    ✔ Expressions should not be too complex @done(29-03-2021 10:34)
    ✔ String literals should not be duplicated @done(29-03-2021 10:34)
    ✔ Callbacks of array methods should have return statements @done(29-03-2021 10:34)
    ✔ Cognitive Complexity of functions should not be too high @done(29-03-2021 10:34)
    ✔ Using pseudorandom number generators (PRNGs) is security-sensitive @done(29-03-2021 10:34)
    ✔ Font declarations should contain at least one generic font family @done(29-03-2021 10:34)
    ✔ Variables should not be shadowed @done(29-03-2021 10:34)
    ✔ Parameters should be passed in the correct order @done(29-03-2021 10:34)
    ✔ Functions should use "return" consistently @done(29-03-2021 10:34)
    ✔ Lines should not be too long @done(29-03-2021 10:34)
    ✔ Assignments should not be made from within sub-expressions @done(29-03-2021 10:34)
    ✔ Ternary operators should not be nested @done(29-03-2021 10:34)
    ✔ For correct parsing especially in the case of multiple t start marker ... @done(29-03-2021 10:34)
    ✔ Variables should be used in the blocks where they are declared @done(29-03-2021 10:34)
    ✔ Increment (++) and decrement (--) operators should n an expression ... @done(29-03-2021 10:34)
    ✔ "===" and "!==" should be used instead of "==" and "!=" @done(29-03-2021 10:34)
    ✔ Source files should not have any duplicated blocks @done(29-03-2021 10:34)
    ✔ Comma operator should not be used @done(29-03-2021 10:34)
    ✔ Functions should not have too many lines of code @done(29-03-2021 10:34)

--- a/src/app/core/components/error404/error404.component.scss
+++ b/src/app/core/components/error404/error404.component.scss
@@ -1,10 +1,14 @@
 .error .clip .shadow
 {
     height: 180px;  /*Contrall*/
+    overflow: hidden;
 }
 .error .clip:nth-of-type(2) .shadow
 {
     width: 130px;   /*Contrall play with javascript*/
+    overflow: hidden;
+    position: relative;
+    box-shadow: inset 20px 0px 20px -15px rgba(150, 150, 150,0.8), 20px 0px 20px -15px rgba(150, 150, 150,0.8);
 }
 .error .clip:nth-of-type(1) .shadow, .error .clip:nth-of-type(3) .shadow
 {
@@ -17,10 +21,20 @@
     line-height: 150px; /*Contrall*/
     font-size: 120px;
     font-weight: bold;
+    position: relative;
+    top: 8%;
+    color: white;
+    background: #07B3F9;
+    border-radius: 50%;
+    display: inline-block;
+    transform: skew(45deg);
 }
 .error h2   /*Contrall*/
 {
     font-size: 32px;
+    color: #A2A2A2;
+    font-weight: bold;
+    padding-bottom: 20px;
 }
 .error .msg /*Contrall*/
 {
@@ -30,6 +44,13 @@
     height: 80px;
     line-height: 80px;
     font-size: 32px;
+    position: relative;
+    z-index: 9999;
+    display: block;
+    background: #535353;
+    color: #A2A2A2;
+    border-radius: 50%;
+    font-style: italic;
 }
 .error span.triangle    /*Contrall*/
 {
@@ -53,17 +74,6 @@
     display: inline-block;
     transform: skew(-45deg);
 }
-.error .clip .shadow
-{
-
-    overflow: hidden;
-}
-.error .clip:nth-of-type(2) .shadow
-{
-    overflow: hidden;
-    position: relative;
-    box-shadow: inset 20px 0px 20px -15px rgba(150, 150, 150,0.8), 20px 0px 20px -15px rgba(150, 150, 150,0.8);
-}
 
 .error .clip:nth-of-type(3) .shadow:after, .error .clip:nth-of-type(1) .shadow:after
 {
@@ -81,16 +91,6 @@
 {
     left: -8px;
 }
-.error .digit
-{
-    position: relative;
-    top: 8%;
-    color: white;
-    background: #07B3F9;
-    border-radius: 50%;
-    display: inline-block;
-    transform: skew(45deg);
-}
 .error .clip:nth-of-type(2) .digit
 {
     left: -10%;
@@ -101,22 +101,6 @@
 }.error .clip:nth-of-type(3) .digit
 {
     left: -20%;
-}
-.error h2
-{
-    color: #A2A2A2;
-    font-weight: bold;
-    padding-bottom: 20px;
-}
-.error .msg
-{
-    position: relative;
-    z-index: 9999;
-    display: block;
-    background: #535353;
-    color: #A2A2A2;
-    border-radius: 50%;
-    font-style: italic;
 }
 .error .triangle
 {
